Add Mastodon to front page

--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@ id: home
           <img src="/assets/images/logo-cookpad.svg" alt="" />
         </a>
       </div>
+      <div class="trusted__block">
+        <a href="https://joinmastodon.org">
+          <img src="/assets/images/logo-mastodon.svg" alt="" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
