Add Canvas LMS to list of big names using Rails
Canvas LMS is one of the most visited websites in the world.
(according to https://www.similarweb.com/website/instructure.com,
#35 in US and #99 worldwide)

As a bonus, it’s probably also the biggest open source Rails app in the 
world: (https://github.com/instructure/canvas-lms)

This adds their logo to the list of people using Rails

--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@ id: home
           <img src="/assets/images/logo-cookpad.svg" alt="" />
         </a>
       </div>
+      <div class="trusted__block">
+        <a href="https://canvaslms.com">
+          <img src="/assets/images/logo-canvas-lms.svg" alt="" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
