--- a/_pages/security.html
+++ b/_pages/security.html
@@ -35,7 +35,7 @@ redirect_from:
           <li>Send an email to the security reports list <a href="mailto:security@rubyonrails.org">security@rubyonrails.org</a>.</li>
           <li>Contact the current security coordinator <a href="mailto:rafaelmfranca@gmail.com">Rafael França</a> directly.</li>
           <li>Contact the backup contact <a href="mailto:jeremy@basecamp.com">Jeremy Daer</a> directly.</li>
-          <li>Email the <a href="https://discuss.rubyonrails.org/c/rubyonrails-core">Rails core list</a> or ask in  <a href="https://discord.gg/d8N68BCw49">the Rails Discord server]</a>.</li>
+          <li>Email the <a href="https://discuss.rubyonrails.org/c/rubyonrails-core">Rails core list</a> or ask in  <a href="https://discord.gg/d8N68BCw49">the Rails Discord server</a>.</li>
         </ul>
         <p>Please note, the Rails core list and Rails Discord server are public areas. When escalating to that address please do not discuss your issue, simply say that you’re trying to get a hold of someone from the security team.</p>
         <hr class="divider" />
