Replace punctuation with Traditional Chinese symbol in doctrine/zh_tw

--- a/doctrine/zh_tw.html
+++ b/doctrine/zh_tw.html
@@ -67,13 +67,13 @@ redirect_from:
         <h3 id="optimize-for-programmer-happiness">程式設計師的快樂優先</h3>
         <p>Ruby 造就了 Rails，所以第一條主義便是從創造 Ruby 的核心理念所提煉出來。</p>
         <p>Ruby 早期的異端邪說就是把程式設計師的幸福擺在第一位。遠把追求幸福放在驅使程式語言與生態圈前進的競爭考量之上。</p>
-        <p>Python 可能對“用一種方法，最好只有一種方法來完成一件事”感到自豪，Ruby 則喜愛自身表現力與巧妙。Java 是保護程式設計師的強力擁簇者，Ruby 則在歡迎工具裡就附上可自盡的繩索。Smalltalk 鑽研消息傳遞的純粹性，Ruby 則積累關鍵字和臃腫的語法構造。</p>
+        <p>Python 可能對「用一種方法，最好只有一種方法來完成一件事」感到自豪，Ruby 則喜愛自身表現力與巧妙。Java 是保護程式設計師的強力擁簇者，Ruby 則在歡迎工具裡就附上可自盡的繩索。Smalltalk 鑽研消息傳遞的純粹性，Ruby 則積累關鍵字和臃腫的語法構造。</p>
         <p>Ruby 與眾不同的原因是看重的事情不一樣。這些考量，都是為了滿足追求程式設計師的幸福。追求導致了與其它程式設計環境的辯論，也打開了主流文化對究竟什麼是程式設計師，以及該如何應對程式設計師的認知。</p>
         <p>Ruby 不僅認可也適應與提昇了程式設計師的感受。這究竟是不適當、還是奇思呢，抑或是喜悅。Matz 跨越了驚人複雜的實作門檻，讓機器面有喜色充滿人性。Ruby 滿是視覺上的錯覺，在我們看起來 Ruby 很簡單，很清晰，也很優美，背後其實是雜技般的錯綜複雜。這些選擇不是沒有代價（問問 JRuby 那些試著要逆向工程 Ruby 的人看看！），這也是為什麼，這是很值得讚揚的一件事。</p>
         <p>這是對程式設計另一種願景的致敬，也決定了我對 Ruby 的愛戀。這不只是簡單易用，不僅是美學的元素，也不是單一的技術成就。而是一種願景，是反文化。Ruby 是一個不適應呆板專業程式設計的人，而是專屬於愛好之士的樂土。</p>
-        <p>我過去談過，發現 Ruby 像是找到完全適合我的魔法手套。比我想像中的任何手套都來得合用。這是我從“寫程式只是因為我需要程式”到“寫程式是因為熱於其中的心智表達與練習”的一次轉換。是找到無我之境，且能夠隨意開啟的入口。對於任何熟悉 Csikszentmihalyi 的作品的人來說，我真的一點也不誇張。</p>
+        <p>我過去談過，發現 Ruby 像是找到完全適合我的魔法手套。比我想像中的任何手套都來得合用。這是我從「寫程式只是因為我需要程式」到「寫程式是因為熱於其中的心智表達與練習」的一次轉換。是找到無我之境，且能夠隨意開啟的入口。對於任何熟悉 Csikszentmihalyi 的作品的人來說，我真的一點也不誇張。</p>
         <p>當我說 Ruby 改變了我，我真的不誇張，Ruby 決定了我人生的努力目標。如此深刻的啟示。Ruby 感染了我，呼喚我對 Matz 的產物做出宣教的工作。傳播這深刻的語言與恩賜。</p>
-        <p>我想你們現在大概都感到疑惑的搖搖頭。我不怪你們。要我還處於“程式設計只不過是工具”的階段，要有人跟我說上面這樣的經歷，我也會搖頭。但接著我可能會對這宗教般的語言發笑。但說實在的，這也是最真誠的理由，即便這可能使某些人，甚至是多數的人感到不愉快。</p>
+        <p>我想你們現在大概都感到疑惑的搖搖頭。我不怪你們。要我還處於「程式設計只不過是工具」的階段，要有人跟我說上面這樣的經歷，我也會搖頭。但接著我可能會對這宗教般的語言發笑。但說實在的，這也是最真誠的理由，即便這可能使某些人，甚至是多數的人感到不愉快。</p>
         <p>無論如何，究竟這對 Rails 意味著什麼？這個理念為什麼持續引導 Rails 演進？要回答這個問題，我想用另一個啟發性的理念來說明，一個早期常用來描述 Ruby 的理念：最小驚訝原則（The Principle of Least Surprise）。Ruby 應該要如你預期般的運行。可以用下面這個對比於 Python 的例子來解釋：</p>
 {% highlight ruby %}
 $ irb
@@ -105,7 +105,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
     <div class="text__body">
       <div class="text__content common-content">
         <h3 id="convention-over-configuration">約定優於配置</h3>
-        <p>早期 Rails 的生產力座右銘是：“你不是獨一無二的，大家都一樣”。只要放下了自負的個人喜好，便可以跳過無謂的世俗決定，而只在最重要的地方下更快的決定。</p>
+        <p>早期 Rails 的生產力座右銘是：「你不是獨一無二的，大家都一樣」。只要放下了自負的個人喜好，便可以跳過無謂的世俗決定，而只在最重要的地方下更快的決定。</p>
         <p>真的有人在乎資料庫主鍵的名稱嗎？用 <code>id</code>、<code>postID</code>、<code>posts_id</code> 或 <code>pid</code>，真的有差別嗎？這真的值得反覆討論嗎？不！</p>
         <p>Rails 部分使命就是，幫開發者在為 Web 打造資訊系統，日漸複雜龐大的決策叢林中披荊斬棘。有幾千個無謂的決策只需要做一次，而若是別人幫你做這些決定，那就更好了。</p>
         <p>約定優於配置，將我們從各種小的決定中解放出來，也提供一個繁茂的草原，讓我們蘊育更深層的抽象。如果我們可以仰賴 <code>Person</code> 類別對應到 <code>people</code> 資料表，我們可以用同樣的詞形變化，來從 <code>has_many :people</code> 推論出，類別是 <code>Person</code>。優良約定的力量是廣泛使用能獲得許多好處。</p>
@@ -125,10 +125,10 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
     <div class="text__body">
       <div class="text__content common-content">
         <h3 id="omakase">主廚精選</h3>
-        <p>在餐廳不知道什麼好吃該怎麼點菜？若你交給主廚挑選，可能可以在了解何為“好”之前，就吃上一頓好料。這就是 Omakase。無須成為美食專家或亂點菜碰運氣，就可以吃到好東西的方法。</p>
-        <p>對程式設計來說，這個實踐的好處是，技術棧交給別人幫你組合，跟我們從約定優於配置所得出的論點相似，但更上一樓。“約定優於配置”考量如何用好單一的工具，而 Omakase 則考量該用什麼框架，以及框架之間該如何合作。</p>
+        <p>在餐廳不知道什麼好吃該怎麼點菜？若你交給主廚挑選，可能可以在了解何為「好」之前，就吃上一頓好料。這就是 Omakase。無須成為美食專家或亂點菜碰運氣，就可以吃到好東西的方法。</p>
+        <p>對程式設計來說，這個實踐的好處是，技術棧交給別人幫你組合，跟我們從約定優於配置所得出的論點相似，但更上一樓。「約定優於配置」考量如何用好單一的工具，而 Omakase 則考量該用什麼框架，以及框架之間該如何合作。</p>
         <p>有這麼一說，程式設計的優良傳統便是把可用的工具交給使用者自己去選擇，授與（還是負擔？）程式設計師決策權。</p>
-        <p>你一定聽過這句話，也暗自點頭贊同：“用最好的工具來解決問題”。這聽起來很基本，但能夠選擇“最好的工具”需要明確的定義出什麼是“最好”。這其實比想像中要難許多。</p>
+        <p>你一定聽過這句話，也暗自點頭贊同：「用最好的工具來解決問題」。這聽起來很基本，但能夠選擇「最好的工具」需要明確的定義出什麼是「最好」。這其實比想像中要難許多。</p>
         <p>這個問題跟在餐廳要吃什麼類似。像是挑選八道菜的每一道，選擇每一個函式庫或框架，這不是獨立的決定。選菜需要根據今晚的狀況來考慮，挑選函式庫則要考量整個系統。</p>
         <p>所以 Rails 我們根據大局考量，把選擇減少到一套好的工具，讓每個程式設計師可以從中挑選：一套為了大家好的工具。好處如下：</p>
         <ol>
@@ -220,9 +220,9 @@ if person.in? people
         <p>但 Monkey Patching 的反面是能夠做出 <code>2.days.ago</code>（回傳兩天前到現在的日期）這樣的美技。你可能會覺得，噢，這交易真不划算。也就是你寧願不要 <code>2.days.ago</code>，也不想修改語言的核心類別，若你這麼想的話，那 Ruby 可能不適合你。</p>
         <p>但有些人出自於安全性的考量，不得以只好放棄修改 Ruby 的核心類別。但反方面來說，語言活躍的原因，正是因為給程式設計師提供了激進不同的觀點：同時也相信可以放心的把工具交給程式設計師使用。</p>
         <p>不只是相信，語言本身也用多種方法，來教導我們使用這些有用的工具。如此一來我們可以把整個產業向上提昇，透過假設多數的程式設計師都想更進步，大家都能使用好的工具，而不傷害到自己。這真是一個鼓舞人心的想法啊，但這有悖於大部分程式設計師對其他同僚的想法。</p>
-        <p>在決定實用工具的價值時，總得以大家為出發點來討論。我尚未聽到任何一個程式設計師說，“我無法相信這股力量，請把它拿走！”。常常聽到則是“我想其他的程式設計師會濫用這個”。但我從來就不喜歡這種家長式的作風。</p>
+        <p>在決定實用工具的價值時，總得以大家為出發點來討論。我尚未聽到任何一個程式設計師說，「我無法相信這股力量，請把它拿走！」。常常聽到則是「我想其他的程式設計師會濫用這個」。但我從來就不喜歡這種家長式的作風。</p>
         <p>這正是 Rails 要提供實用工具的原因。框架所提供的工具不僅和語言所提供的工具同樣實用，也很銳利。我們不為提供這些工具而感到抱歉。事實上，我們應該要慶祝我們有足夠的信心，來啟發下一代的程式設計師，有勇氣相信他們。</p>
-        <p>許多 Rails 的功能常常飽受這樣的爭議：“太過自由”。但我現在想到的一個例子是 <a href="https://github.com/rails/rails/blob/master/activesupport/lib/active_support/concern.rb">Concern 這個功能</a>。這是基於 Ruby 內建功能 Module 之上的一層，薄薄的語法糖。為了單一類別打造，可以用來封裝多個相關卻又可獨立理解的“關係”（也正是 Concern 名字的由來）。</p>
+        <p>許多 Rails 的功能常常飽受這樣的爭議：「太過自由」。但我現在想到的一個例子是 <a href="https://github.com/rails/rails/blob/master/activesupport/lib/active_support/concern.rb">Concern 這個功能</a>。這是基於 Ruby 內建功能 Module 之上的一層，薄薄的語法糖。為了單一類別打造，可以用來封裝多個相關卻又可獨立理解的「關係」（也正是 Concern 名字的由來）。</p>
         <p>對於 Concern 的指控是有了一組新的抽屜，讓程式設計師很容易把物件都塞進去。這說得沒錯，Concern 的用途就像這樣。</p>
         <p>但謬論是不要提供像是 Concern 的功能，但只要是有點能力的人來使用 Concern，便可得出有說服力的概念分離，程式設計師可以從 Concern 獲得先天上架構的優勢。這麼說吧，如果你不能保持 Concern 的整潔，那你也不可能寫出單支優雅的程式。</p>
         <p>尚未學會使用這些實用工具的程式設計師，嚐不到收穫的果實。這裡有一個重要的單字：尚未。我相信每個程式設計師，都有自己的一條道，最終將變成有能力的 Ruby 與 Rails 程式設計師。有能力我是指有足夠的知識，知道何時，以及該怎麼根據場景來使用不同的工具，有時甚至得使用危險的工具。</p>
