--- a/doctrine/zh_tw.html
+++ b/doctrine/zh_tw.html
@@ -14,7 +14,7 @@ redirect_from:
       <div class="heading__content heading__content--has-headline common-content">
         <dl>
           <dt>David Heinemeier Hansson</dt>
-          <dd>翻譯 <a href="https://github.com/juanitofatas">Juanito Fatas</a></dd>
+          <dd>翻譯 <a href="https://github.com/juanitofatas">Juanito Fatas</a>, <a href="https://github.com/wildjcrt">wildjcrt</a></dd>
         </dl>
       </div>
       <div class="language">
