Fix some typos in Traditional Chinese in doctrine/zh_tw

--- a/doctrine/zh_tw.html
+++ b/doctrine/zh_tw.html
@@ -136,7 +136,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
           <li><strong>大家熟練使用相同的基礎工具</strong>：身為一個全棧的框架，Rails 有很多可以移動的部件，這些部件如何一起工作？如何獨立工作？兩者同樣重要。多數軟體開發的痛苦不是來自於獨立的部件，而是部件之間的互動。當我們用同樣的方式來使用這些部件，相同的配置便可得出相同的錯誤，則大家受的苦便減少了。</li>
           <li><strong>有必要時也可以換掉</strong>：Rails 是主廚精選的技術棧，某些子框架或函式庫你仍保有選擇權。只是你不一定要換掉，這些決策可以之後再做，在你開發出一個明確的，需要不一樣的個人化應用時再來考慮吧。</li>
         </ol>
-        <p>因為多數使用 Rails，有經驗的程式設計師，不是都討厭菜單上的每一道（討厭的話就不會繼續使用 Rails 了。）他們努力挑選想要的替代方案，而其它則享受跟大家一樣的工具。</p>
+        <p>因為多數使用 Rails，有經驗的程式設計師，不是都討厭菜單上的每一道（討厭的話就不會繼續使用 Rails 了）。他們努力挑選想要的替代方案，而其它則享受跟大家一樣的工具。</p>
       </div>
     </div>
   </div>
@@ -225,7 +225,7 @@ if person.in? people
         <p>許多 Rails 的功能常常飽受這樣的爭議：「太過自由」。但我現在想到的一個例子是 <a href="https://github.com/rails/rails/blob/master/activesupport/lib/active_support/concern.rb">Concern 這個功能</a>。這是基於 Ruby 內建功能 Module 之上的一層，薄薄的語法糖。為了單一類別打造，可以用來封裝多個相關卻又可獨立理解的「關係」（也正是 Concern 名字的由來）。</p>
         <p>對於 Concern 的指控是有了一組新的抽屜，讓程式設計師很容易把物件都塞進去。這說得沒錯，Concern 的用途就像這樣。</p>
         <p>但謬論是不要提供像是 Concern 的功能，但只要是有點能力的人來使用 Concern，便可得出有說服力的概念分離，程式設計師可以從 Concern 獲得先天上架構的優勢。這麼說吧，如果你不能保持 Concern 的整潔，那你也不可能寫出單支優雅的程式。</p>
-        <p>尚未學會使用這些實用工具的程式設計師，嚐不到收穫的果實。這裡有一個重要的單字：尚未。我相信每個程式設計師，都有自己的一條道，最終將變成有能力的 Ruby 與 Rails 程式設計師。有能力我是指有足夠的知識，知道何時，以及該怎麼根據場景來使用不同的工具，有時甚至得使用危險的工具。</p>
+        <p>尚未學會使用這些實用工具的程式設計師，嚐不到收穫的果實。這裡有一個重要的單字：「尚未」。我相信每個程式設計師，都有自己的一條道，最終將變成有能力的 Ruby 與 Rails 程式設計師。有能力我是指有足夠的知識，知道何時，以及該怎麼根據場景來使用不同的工具，有時甚至得使用危險的工具。</p>
         <p>這不是要把幫助他們成為厲害開發者的責任卸下。框架與語言應該是有耐心的家教，願意指導幫助任何人，一步步成為大師。同時認可不斷犯錯是唯一的道路：錯用工具、一點教訓、汗水，有時候可能是淚水。想變強就是這樣，沒有捷徑。</p>
         <p>Ruby on Rails 是大廚的廚房，是想變成大廚的試煉場。你可能從洗盤子起步，但可以一步步努力往上爬，爬到掌管廚房。別讓任何人告訴你，最好的工具不能放心的交給你使用，而是應該看作成長過程的一部分。</p>
       </div>
@@ -242,9 +242,9 @@ if person.in? people
         <p>我們已經談過，這是多麼廣闊的眼界。但對於一人團隊來說，不過就是現實的考量而已。Rails 特別尋找通才來打造整個系統。目的不是要把專家束之高閣，而是讓通才和專家合力，打造出更具長遠價值的系統。</p>
         <p>讓一個人可以做更多的事情，才想出了整合系統。而正是在整合系統裡，我們可以拿掉許多不必要的抽象，減少抽象層之間的重複（像是 Server 端與 Client 端可以共用模版），以及避免系統在非必要的情況下分離。</p>
         <p>系統開發的複雜度多半是引入了系統部件之間的界限，比如限制甲部件該如何和乙部件互相調用。本地物件之間的方法呼叫，遠比 Microservices 之間的遠端程序呼叫要來得簡單。Microservices 是另一個存在失敗狀態、延遲問題、相依更新週期的新世界，等著讓想嘗試拆分服務的人去冒險。</p>
-        <p>有時候這種服務的拆分是必要的。若想建立讓大家可以透過 HTTP 使用的 API，好吧，那你就得毫無怨言的處理許多問題（雖然處理進來的請求比發出去請求要簡單—但要是你的服務掛了，別人就會收到錯誤的狀態了）。但這至少對你個人的開發體驗傷害有限。</p>
+        <p>有時候這種服務的拆分是必要的。若想建立讓大家可以透過 HTTP 使用的 API，好吧，那你就得毫無怨言的處理許多問題（雖然處理進來的請求比發出去請求要簡單——但要是你的服務掛了，別人就會收到錯誤的狀態了）。但這至少對你個人的開發體驗傷害有限。</p>
         <p>更糟糕的是，當系統過早解耦，或是過早拆成小服務，比這更糟糕的是，拆成 Microservices。這是現代網路應用的錯誤認知，你只會反覆的重造系統：在 Server 端打造一次，在 JavaScript MVC Client 端又打造一次，在原生手機端又再來一次等等。這不是自然規律，你也不需要這樣。</p>
-        <p>若想在整個應用裡共享大部分的功能，這完全是可行的。桌上應用和 mobile app 可以用同樣的 Controller 跟 View。盡可能的把功能集中在 Majestic Monolith：整合系統。集中在一起完全不需要犧牲舉凡速度，使用者體驗，以及其他錯讓你以為要盡早拆分系統的因素。</p>
+        <p>若想在整個應用裡共享大部分的功能，這完全是可行的。桌上應用和 mobile app 可以用同樣的 Controller 跟 View。盡可能的把功能集中在 Majestic Monolith：整合系統。集中在一起完全不需要犧牲舉凡速度、使用者體驗、以及其他錯讓你以為要盡早拆分系統的因素。</p>
         <p>這正是我們要追求的系統：包含所有功能，容易發佈，簡單理解的單一系統，整合系統。</p>
       </div>
     </div>
@@ -278,7 +278,7 @@ if person.in? people
         <h3 id="big-tent">包容並重</h3>
         <p>正是歸功於這麼多爭議性的概念才有 Rails。但若我們要求每個人完全遵從所有的主義，Rails 可能很快的就變成孤芳自賞的小族群，所以我們不這麼做！</p>
         <p>我們需要反面意見。我們需要方言。我們需要多元的思想和群眾。正是在概念的熔爐裡，我們才能提煉出這之中最好的讓大家共享。許多人用程式碼或是深思熟慮的論證來提供意見。</p>
-        <p>當這篇基本主義描述著一種理想形式時，日常生活中的實際情況卻更微妙（有趣）。Rails 可以包容尊重這樣龐大的社群，是因為我們幾乎不試驗任何的一份子。</p>
+        <p>當這篇基本主義描述著一種理想形式時，日常生活中的實際情況卻更微妙（和有趣）。Rails 可以包容尊重這樣龐大的社群，是因為我們幾乎不試驗任何的一份子。</p>
         <p>RSpec，一個我不喜歡的測試 DSL。RSpec 的持續成功是最完美的證據。我可以說到臉紅氣喘，為什麼我不覺得它的方式是對的，但 RSpec 仍可以繁榮綻放。這才是重要的一點！</p>
         <p>同樣的論點也適用在 Rails 作 API 的例子。雖然我個人關注也花心思的是帶有 View 的整合系統；但對於想要分離 Client 端與 Server 端的人來說，這當然是 Rails 可以發揮的地方。我們應該要擁抱這一點，就是 Rails 不只能做一件事，當然也可以做 API。</p>
         <p>包容並重並不代表把所有東西加諸給所有人。這只是代表你歡迎人們帶自己的飲料來參加你的派對。我們要給別人加入我們的機會，卻又不能失了我們的靈魂與價值。因為我們可能從他們身上可以學到，如何調一兩杯新的飲料。</p>
