--- a/_pages/maintenance.html
+++ b/_pages/maintenance.html
@@ -32,7 +32,7 @@ redirect_from:
         <p>Only added to the main branch and will not be made available in patch releases.</p>
         <hr class="divider" />
         <h3>Bug Fixes</h3>
-        <p>Only the latest release series will receive bug fixes. When enough bugs are fixed and its deemed worthy to release a new gem, this is the branch it happens from.</p>
+        <p>Only the latest release series will receive bug fixes. Bug fixes are typically added to the main branch, and backported to the x-y-stable branch of the latest release series if there is sufficient need. When enough bugs fixes have been added to an x-y-stable branch, a new patch release is built from it. For example, a theoretical 1.2.2 patch release would be built from the 1-2-stable branch.</p>
         <p>In special situations, where someone from the <a href="/community#core">Rails core team</a> agrees to support more series, they are included in the list of supported series.</p>
         <p><strong>Currently included series:</strong> 7.0.Z.</p>
         <hr class="divider" />
