--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@ id: home
           <img src="/assets/images/logo-fleetio.svg" alt="Fleetio" />
         </a>
       </div>
+      <div class="trusted__block">
+        <a href="https://makeplans.com" aria-label="MakePlans">
+          <img src="/assets/images/logo-makeplans.svg" alt="MakePlans" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
