--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -36,6 +36,13 @@ permalink: /foundation
         
         <p>The foundation is open to new contributing members, who may apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
 
+        <p>The foundation is open to new contributing members, who may apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
+
+        <hr class="divider" />
+
+        <h3>Our Executive Director</h3>
+        <p><a href="https://www.linkedin.com/in/amandabrookeperino/">Amanda Perino</a> is our executive director. You can reach her at amanda@rubyonrails.org.</p>
+        
         <hr class="divider" />
 
         <h3>Our Structure</h3>
