--- a/_pages/trademarks.html
+++ b/_pages/trademarks.html
@@ -47,7 +47,7 @@ redirect_from:
         <ul>
           <li>Naming your company or product after Ruby on Rails, like “The Rails Consultants” or “The Rails Web Server”.</li>
         </ul>
-        <p>You can request permission by emailing <a href="mailto:dhh@hey.com">dhh@hey.com</a>.</p>
+        <p>You can request permission by emailing <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a>.</p>
       </div>
     </div>
   </div>
