--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -32,9 +32,11 @@ permalink: /foundation
         <hr class="divider" />
 
         <h3>Our Members</h3>
-        <p>In alphabetical order, the eight founding core members of the foundation are: <a href="https://cookpad.com">Cookpad</a>, <a href="https://www.doximity.com">Doximity</a>, <a href="https://www.fleetio.com">Fleetio</a>, <a href="https://github.com">GitHub</a>, <a href="https://www.intercom.com">Intercom</a>, <a href="https://www.procore.com">Procore</a>, <a href="https://www.shopify.com">Shopify</a>, and <a href="https://37signals.com">37signals</a>.</p>
-
-        <p>The foundation is open to new contributing members, who may apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
+        <p>In alphabetical order, the eight founding Core members of the foundation are: <a href="https://cookpad.com">Cookpad</a>, <a href="https://www.doximity.com">Doximity</a>, <a href="https://www.fleetio.com">Fleetio</a>, <a href="https://github.com">GitHub</a>, <a href="https://www.intercom.com">Intercom</a>, <a href="https://www.procore.com">Procore</a>, <a href="https://www.shopify.com">Shopify</a>, and <a href="https://37signals.com">37signals</a>.</p>
+          
+        <p>The next tier of membership is Contributing member, and we are pleased to have <a href="https://cedarcode.com">Cedarcode</a> as the first Contributing member to join the Rails Foundation.</p>
+          
+        <p>The foundation is always open to new contributing members. Please apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
 
         <hr class="divider" />
 
