--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -36,7 +36,7 @@ permalink: /foundation
           
         <p>The next tier of membership is Contributing member, and we are pleased to have <a href="https://cedarcode.com">Cedarcode</a> as the first Contributing member to join the Rails Foundation.</p>
           
-        <p>The foundation is always open to new contributing members. Please apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
+        <p>The foundation is always open to new Contributing members. Please apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
 
         <hr class="divider" />
 
@@ -51,12 +51,12 @@ permalink: /foundation
         <hr class="divider" />
 
         <h3>Our Board</h3>
-        <p>The founding core members are each represented by one employee on the foundation's board, which is then chaired by the creator of Ruby on Rails, David Heinemeier Hansson.</p>
+        <p>The founding Core members are each represented by one employee on the foundation's board, which is then chaired by the creator of Ruby on Rails, David Heinemeier Hansson.</p>
 
         <hr class="divider" />
 
         <h3>Our Budget</h3>
-        <p>The eight core foundation members have together generously endowed the foundation with $1,000,000 USD in seed funding to make a real difference on all the aforementioned areas of improvement. Going forward, these members will contribute $400,000/year.</p>
+        <p>The eight Core foundation members have together generously endowed the foundation with $1,000,000 USD in seed funding to make a real difference on all the aforementioned areas of improvement. Going forward, these members will contribute $400,000/year.</p>
 
         <p>We thus will not have to rely on funding from individual contributors.</p>
       </div>
