Added suggestion form to Foundation page
Also changed order of sections: Moved board up under Members.

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -39,6 +39,11 @@ permalink: /foundation
         <p>The foundation is always open to new Contributing members. Please apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
 
         <hr class="divider" />
+        
+        <h3>Our Board.</h3>
+        <p>The founding Core members are each represented by one employee on the foundation's board, which is then chaired by the creator of Ruby on Rails, David Heinemeier Hansson.</p>
+
+        <hr class="divider" />
 
         <h3>Our Executive Director.</h3>
         <p><a href="https://www.linkedin.com/in/amandabrookeperino/">Amanda Perino</a> is our executive director. You can reach her at amanda@rubyonrails.org.</p>
@@ -50,15 +55,15 @@ permalink: /foundation
 
         <hr class="divider" />
 
-        <h3>Our Board.</h3>
-        <p>The founding Core members are each represented by one employee on the foundation's board, which is then chaired by the creator of Ruby on Rails, David Heinemeier Hansson.</p>
-
-        <hr class="divider" />
-
         <h3>Our Budget.</h3>
         <p>The eight Core foundation members have together generously endowed the foundation with $1,000,000 USD in seed funding to make a real difference on all the aforementioned areas of improvement. Going forward, these members will contribute a combined $400,000/year.</p>
 
         <p>We thus will not have to rely on funding from individual contributors.</p>
+        
+        <h3>Suggestions?</h3>
+        <p>We are always open to hearing your ideas and suggestions that align with our mission to improve the documentation, education, events, and marketing efforts around Rails. Feel free to use <a href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb">this suggestion form</a> to send us your ideas.</p>
+
+        <hr class="divider" />
       </div>
     </div>
   </div>
