--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -61,7 +61,8 @@ permalink: /foundation
         <p>We thus will not have to rely on funding from individual contributors.</p>
         
         <h3>Suggestions?</h3>
-        <p>We are always open to hearing your ideas and suggestions that align with our mission to improve the documentation, education, events, and marketing efforts around Rails. Feel free to use <a href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb">this suggestion form</a> to send us your ideas.</p>
+        <p>We are always open to hearing ideas and suggestions that align with our mission to improve the documentation, education, events, and marketing efforts around Rails.</p>
+        <p>Feel free to use <a href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb">this suggestion form</a> to send us your ideas.</p>
 
         <hr class="divider" />
       </div>
