--- a/_pages/security.html
+++ b/_pages/security.html
@@ -43,7 +43,7 @@ redirect_from:
         <ol>
           <li>Security report received and is assigned a primary handler. This person will coordinate the fix and release process. Problem is confirmed and a list of all affected versions is determined. Code is audited to find any potential similar problems.</li>
           <li>Fixes are prepared for all releases which are still supported. These fixes are not committed to the public repository but rather held locally pending the announcement.</li>
-          <li>On the embargo date, the Rails Security mailing list is sent a copy of the announcement. The changes are pushed to the public repository and new gems released to <a href="https://rubygems.org/">RubyGems</a>. An annoucement of the releases and a link to the advisory will be published on <a href="https://rubyonrails.org/blog/">the Rails weblog</a>.</li>
+          <li>On the embargo date, the Rails Security mailing list is sent a copy of the announcement. The changes are pushed to the public repository and new gems released to <a href="https://rubygems.org/">RubyGems</a>. An announcement of the releases and a link to the advisory will be published on <a href="https://rubyonrails.org/blog/">the Rails weblog</a>.</li>
         </ol>
         <p>This process can take some time, especially when coordination is required with maintainers of other projects. Every effort will be made to handle the bug in as timely a manner as possible, however it’s important that we follow the release process above to ensure that the disclosure is handled in a consistent manner.</p>
         <hr class="divider" />
