--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -65,6 +65,7 @@ permalink: /foundation
         <p>Feel free to use <a href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb">this suggestion form</a> to send us your ideas.</p>
 
         <hr class="divider" />
+        <p><a href="/privacy">Rails Foundation Privacy Policy</a>
       </div>
     </div>
   </div>
