--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -34,7 +34,7 @@ permalink: /foundation
         <h3>Our Members.</h3>
         <p>In alphabetical order, the eight founding Core members of the foundation are: <a href="https://cookpad.com">Cookpad</a>, <a href="https://www.doximity.com">Doximity</a>, <a href="https://www.fleetio.com">Fleetio</a>, <a href="https://github.com">GitHub</a>, <a href="https://www.intercom.com">Intercom</a>, <a href="https://www.procore.com">Procore</a>, <a href="https://www.shopify.com">Shopify</a>, and <a href="https://37signals.com">37signals</a>.</p>
           
-        <p>The next tier of membership is Contributing member, and we are pleased to have <a href="https://cedarcode.com">Cedarcode</a> and <a href="https://planetargon.com">Planet Argon</a> as the first two Contributing members to join the Rails Foundation.</p>
+        <p>The next tier of membership is Contributing member, and <a href="https://appsignal.com">AppSignal</a>, <a href="https://cedarcode.com">Cedarcode</a> and <a href="https://planetargon.com">Planet Argon</a> have all joined in support of our mission.</p>
           
         <p>The foundation is always open to new Contributing members. Please apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
 
