Add OpenGraph image, title, and description

--- a/world/index.html
+++ b/world/index.html
@@ -1,6 +1,9 @@
 ---
 layout: world
 permalink: /world
+title: Rails World
+description: Rails World - 5 & 6 Oct, 2023 - Beurs van Berlage, Amsterdam, NL
+og_image: '/assets/images/opengraph-world.png'
 ---
 
 <div class="world">
