move world layout to world/default.html

--- a/world/index.html
+++ b/world/index.html
@@ -1,5 +1,5 @@
 ---
-layout: world
+layout: world/default
 permalink: /world
 title: Rails World
 description: Rails World - 5 & 6 Oct, 2023 - Beurs van Berlage, Amsterdam, NL
