add hero section

--- a/world/index.html
+++ b/world/index.html
@@ -15,3 +15,17 @@ title: Rails World 2023
     </ul>
   </nav>
 </header>
+
+<content-container>
+<!-- hero -->
+  <section class="hero">
+    <div class="hero__content" style="--bubble-content: '20 years of Ruby on Rails'">
+      <h1>Join our first Ruby on Rails Conference!</h1>
+      <p>October 5 & 6</p>
+      <p class="hero__location">{% include world/icons/pin.html %} <a href="https://goo.gl/maps/HFbht8c3Yo8ZEpi77" target="_blank" class="hero__link">Amsterdam, Beurs van Berlage</a></p>
+      <button class="button button--dark"><a href="#">Tickets</a></button>
+    </div>
+  </section>
+
+
+</content-container>
