create callout section

--- a/world/index.html
+++ b/world/index.html
@@ -51,5 +51,19 @@ title: Rails World 2023
 
     </section>
 
+    <!-- callout -->
+    <section class="callout">
+      <div class="callout__banner">
+        <right-border>
+          <flex-container>
+              <img src="#" alt="Rails 20th Anniversary">
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatibus deserunt illum numquam pariatur vel dolore distinctio, suscipit earum enim tenetur eveniet impedit eius perferendis est dicta officia sapiente quae.</p>
+          </flex-container>
+        </right-border>
+      </div>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore doloremque doloribus culpa iste reiciendis incidunt excepturi officia, a debitis cupiditate itaque earum placeat harum voluptatem esse modi nesciunt ab! Ducimus?</p>
+      <button class="button button--light"><a href="#">Prospectus PDF</a></button>
+    </section>
   </container-large>
 </content-container>
