--- a/world/index.html
+++ b/world/index.html
@@ -44,4 +44,20 @@ title: Rails World 2023
           </sl-carousel>
           <a href="/world/speakers" class="button button--light">See Full Line-Up</a>
     </section>
+
+    <!-- callout -->
+    <section class="callout">
+      <div class="callout__banner">
+      <bordered-container>
+          <flex-container>
+              <img src="#" alt="Rails 20th Anniversary">
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit voluptatibus deserunt illum numquam pariatur vel dolore distinctio, suscipit earum enim tenetur eveniet impedit eius perferendis est dicta officia sapiente quae.</p>
+          </flex-container>
+      </bordered-container>
+      </div>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore doloremque doloribus culpa iste reiciendis incidunt excepturi officia, a debitis cupiditate itaque earum placeat harum voluptatem esse modi nesciunt ab! Ducimus?</p>
+      <a href="#" class="button button--light">Prospectus PDF</a>
+    </section>
+
 </content-container>
