style individual speaker page

--- a/world/index.html
+++ b/world/index.html
@@ -4,7 +4,7 @@ permalink: /world
 title: Rails World 2023
 ---
 
-<content-container>
+<content-container class="large">
 <!-- hero -->
   <section class="hero">
     <div class="hero__content" style="--bubble-content: '20 years of Ruby on Rails'">
