--- a/world/speakers.html
+++ b/world/speakers.html
@@ -4,33 +4,20 @@ title: Speakers
 layout: world/default
 ---
 
-<h1>Speakers</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eum amet architecto tempore voluptate, ipsa possimus sint assumenda, a reprehenderit animi vel voluptates quos temporibus, dolores esse vero qui doloribus.</p>
-
 {% assign sorted_speakers = site.world_speakers | sort: 'last_name' %}
 {% assign keynote_speakers = sorted_speakers | where: 'keynote', true %}
 {% assign non_keynote_speakers = sorted_speakers | where: 'keynote', false %}
 
-<div>
-  <ul>
-    {% for speaker in keynote_speakers %}
-    <li>
-      <a href="{{ speaker.url }}">
-      <img src="" alt="{{ speaker.first_name }}'s Profile Picture">
-      <h2>{{ speaker.name }}</h2>
-      <p>{{ speaker.role }}</p>
-      </a>
-    </li>
-    {% endfor %}
+<content-container class="speakers__index">
+  <h1>Speakers</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eum amet architecto tempore voluptate, ipsa possimus sint assumenda, a reprehenderit animi vel voluptates quos temporibus, dolores esse vero qui doloribus.</p>
 
+  <ul class="speakers__gallery">
+    {% for speaker in keynote_speakers %}
+      <li>{% include world/speaker-card.html %}</li>
+    {% endfor %}
     {% for speaker in non_keynote_speakers %}
-    <li>
-      <a href="{{ speaker.url }}">
-      <img src="" alt="{{ speaker.first_name }}'s Profile Picture">
-      <h2>{{ speaker.name }}</h2>
-      <p>{{ speaker.role }}</p>
-      </a>
-    </li>
+      <li>{% include world/speaker-card.html %}</li>
     {% endfor %}
   </ul>
-</div>
+</content-container>
