make homepage responsive

--- a/world/index.html
+++ b/world/index.html
@@ -15,7 +15,7 @@ title: Rails World 2023
       <h1>Join our first Ruby on Rails Conference!</h1>
       <p>October 5 & 6</p>
       <p class="hero__location">{% include world/icons/pin.html %} <a href="https://goo.gl/maps/HFbht8c3Yo8ZEpi77" target="_blank" class="hero__link">Amsterdam, Beurs van Berlage</a></p>
-      <a href="#" class="button button--dark">Tickets</a>
+      <tito-button event="rails-world/rails-world-2023"></tito-button>
     </div>
   </section>
 
@@ -28,7 +28,7 @@ title: Rails World 2023
     <section class="speakers">
           <h2>Our Speakers</h2>
           <!-- speaker carousel -->
-          <sl-carousel class="aspect-ratio scroll-hint" style="--aspect-ratio: 4/5; --scroll-hint: 5%;" navigation pagination mouse-dragging slides-per-page="4" slides-per-move="4">
+          <sl-carousel class="aspect-ratio scroll-hint" navigation pagination mouse-dragging>
             {% for speaker in keynote_speakers %}
               <sl-carousel-item>{% include world/speaker-card.html %}</sl-carousel-item>
             {% endfor %}
