Tweak hero ticket link and info

--- a/world/index.html
+++ b/world/index.html
@@ -21,11 +21,12 @@ title: Rails World 2023
 
       <p class="hero__location">
         {% include world/icons/pin.html %}
-        <a href="https://goo.gl/maps/HFbht8c3Yo8ZEpi77" target="_blank" class="hero__link">
+        <a href="https://goo.gl/maps/HFbht8c3Yo8ZEpi77" target="_blank">
           Amsterdam, Beurs van Berlage
         </a>
       </p>
 
+      <br>
       <tito-button event="rails-world/rails-world-2023"></tito-button>
     </div>
   </section>
