Tweak about section metrics

--- a/world/index.html
+++ b/world/index.html
@@ -31,9 +31,10 @@ title: Rails World 2023
     </div>
   </section>
 
-<!-- about -->
   <section class="about">
-    <p>Rails World is a two-day, two track conference featuring technical talks, demos, workshops, networking, and keynotes. You’ll hear from the creators and maintainers of Rails on the latest features and best practices in Rails development.</p>
+    <p>
+      Rails World is a two-day, two track conference featuring technical talks, demos, workshops, networking, and keynotes. You’ll hear from the creators and maintainers of Rails on the latest features and best practices in Rails development.
+    </p>
   </section>
 
     <!-- speakers -->
